<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <include layout="@layout/action_bar_custom" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_50sdp"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/round_shadow">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgUserPic"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_place_holder" />

                <ProgressBar
                    android:id="@+id/loadingSpinner"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimary"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgCamera"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/round_light_orange_drawable"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_camera" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtFirstNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/first_name"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFirstName"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMiddleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/middle_name"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMiddleName"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLastNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/last_name"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastName"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUsernameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/username"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/email_id"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMailId"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPhoneInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/mobileNumber"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhoneNumber"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_phone_active"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtDepartmentInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/departments"
                app:hintTextAppearance="@style/TextInputLayout.gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDepartment"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSaveProfile"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_square_button_drawable"
                    android:minWidth="@dimen/space_two_hundred"
                    android:text="@string/save_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_eighteen" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>