<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_20sdp"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dialog_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_cancel"
            android:tint="@color/white" />
    </RelativeLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A1FFFFFF"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/round_square_button_drawable"
            android:minWidth="@dimen/space_two_hundred"
            android:text="@string/clear_pad"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_eighteen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/round_square_button_drawable"
            android:minWidth="@dimen/space_two_hundred"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_eighteen" />
    </LinearLayout>

    <ImageView
        android:id="@+id/signature_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />
</LinearLayout>
