<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linBottomMainView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    android:background="@drawable/round_corner_white_drawable"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/_32sdp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/linBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleOverView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center|start"
            android:text="@string/complaint_overview"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgShowOverView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:paddingStart="@dimen/_2sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/_2sdp"
            android:src="@drawable/ic_arrow_up_orange" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/text_divider_color"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/linOverViewCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp"
            android:visibility="visible"
            android:weightSum="4">


            <LinearLayout
                android:id="@+id/llPendingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtPendingCount"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/round_open_drawable"
                    android:gravity="center"
                    android:text="13"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtPending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center|start"
                    android:text="@string/pending"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llInProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtInProgressCount"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/round_schedule_drawable"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtInProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center|start"
                    android:text="@string/in_progress"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCompletedView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCompletedCount"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/round_close_drawable"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center|start"
                    android:text="@string/completed"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llVerifyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtVerifyCount"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/round_total_drawable"
                    android:gravity="center"
                    android:text="15"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtVerify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center|start"
                    android:text="@string/verified"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <!-- <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/chart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center" />-->

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>
